Fixed more contrast issues

--- a/css/content.css
+++ b/css/content.css
@@ -15,6 +15,10 @@
     font-size: 1.3rem;
 }
 
+a{
+    color: #0076af;
+}
+
 .content .container{
     width: fit-content;
 }
